update group from manager
